# igal_qt-mirror

./: .clang-format  .gitignore  CMakeLists.txt  PKGBUILD  qt.natvis.xml
cmake/: CPackSettings.cmake
install/linux/: PKGBUILD  igal_qt.desktop  install.sh
rsc/: fonts.qrc  icons.qrc
src/: CachedMediaProxy.cpp  CachedMediaProxy.hpp  ClickableSlider.cpp  ClickableSlider.hpp  HelpDialog.cpp  HelpDialog.hpp  HelpOverlay.cpp  HelpOverlay.hpp  InfoOverlayWidget.cpp  InfoOverlayWidget.hpp  ListSelectWidget.cpp  ListSelectWidget.hpp  MainWindow.cpp  MainWindow.hpp  MediaWidget.cpp  MediaWidget.hpp  PreviewStrip.cpp  PreviewStrip.hpp  Utils.cpp  Utils.hpp  VideoControls.cpp  VideoControls.hpp  VideoPlayerWidget.cpp  VideoPlayerWidget.hpp  main.cpp
